Minor UI align fix

--- a/src/app/components/track-ranking/track-ranking.component.scss
+++ b/src/app/components/track-ranking/track-ranking.component.scss
@@ -27,7 +27,7 @@
 }
 
 .mat-list {
-  margin-bottom: 18px;
+
 }
 
 .lap-line {
